--- a/XEngine.Render/XEngine.Render.vcxproj.filters
+++ b/XEngine.Render/XEngine.Render.vcxproj.filters
@@ -1,2 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" />
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <ItemGroup>
+    <ClInclude Include="XEngine.Render.h" />
+    <ClInclude Include="XEngine.Render.Scheduler.h" />
+    <ClInclude Include="XEngine.Render.ShaderLibrary.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="XEngine.Render.cpp" />
+  </ItemGroup>
+</Project>
