--- a/XEngine.Render.Shaders/XEngine.Render.Shaders.vcxproj
+++ b/XEngine.Render.Shaders/XEngine.Render.Shaders.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <None Include="_BuildDescription.txt" />
+    <CustomBuild Include=".LibraryIndex.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -65,6 +65,11 @@
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
+    <CustomBuild>
+      <Command>$(OutDir)XEngine.Render.Shaders.Builder_$(PlatformName).$(Configuration).exe</Command>
+      <Message>Compiling shader library</Message>
+      <Outputs>$(OutDir)shaderpack;%(Outputs)</Outputs>
+    </CustomBuild>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
