--- a/XEngine.Core/XEngine.Core.vcxproj
+++ b/XEngine.Core/XEngine.Core.vcxproj
@@ -107,7 +107,7 @@
     <ClCompile Include="XEngine.Core.Input.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\XEngine.Base\XEngine.Base.vcxproj">
+    <ProjectReference Include="..\XEngine.Common\XEngine.Common.vcxproj">
       <Project>{276891e4-c661-4502-b581-781efb8098d6}</Project>
     </ProjectReference>
     <ProjectReference Include="..\XEngine.Render.HAL.Common\XEngine.Render.HAL.Common.vcxproj">
