--- a/XEngine.Render.HAL.ShaderCompiler/XEngine.Render.HAL.ShaderCompiler.vcxproj
+++ b/XEngine.Render.HAL.ShaderCompiler/XEngine.Render.HAL.ShaderCompiler.vcxproj
@@ -175,6 +175,9 @@
     <ProjectReference Include="..\XEngine.Render.HAL.Common\XEngine.Render.HAL.Common.vcxproj">
       <Project>{102d6f8c-faad-4fd3-9b3a-16923042465e}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\XEngine.XStringHash\XEngine.XStringHash.vcxproj">
+      <Project>{ca640875-7c04-42ba-b081-8dac82c9f48d}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\XLib\XLib.vcxproj">
       <Project>{df81a513-72e3-4b74-b866-97f3bb61d45f}</Project>
     </ProjectReference>
