XEngine.Render: Descriptor sets WIP
XEngine.Render.HAL.ShaderCompiled: Implemented descriptor set compilation
XEngine.Render.Shaders.Builder: Implemented descriptor set loading
XEngine.Render.HAL: Renamed "bind point" to "binding" everywhere

--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
@@ -102,6 +102,7 @@ copy $(SolutionDir)External\Microsoft.DirectXShaderCompiler\bin\$(Platform)\*.pd
   <ItemGroup>
     <ClCompile Include="PseudoCTokenizer.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.cpp" />
+    <ClCompile Include="XEngine.Render.Shaders.Builder.DescriptorSetLayoutList.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.EntryPoint.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.PipelineLayoutList.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.PipelineList.cpp" />
@@ -111,6 +112,7 @@ copy $(SolutionDir)External\Microsoft.DirectXShaderCompiler\bin\$(Platform)\*.pd
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PseudoCTokenizer.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.DescriptorSetLayoutList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.PipelineLayoutList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.PipelineList.h" />
