--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="XEngine.Render.Shaders.Builder.ShaderList.cpp" />
     <ClCompile Include="PseudoCTokenizer.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.BuildDescriptionLoader.cpp" />
+    <ClCompile Include="XEngine.Render.Shaders.Builder.DescriptorSetLayoutList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourceCache.h" />
@@ -18,5 +19,6 @@
     <ClInclude Include="XEngine.Render.Shaders.Builder.PipelineLayoutList.h" />
     <ClInclude Include="PseudoCTokenizer.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.BuildDescriptionLoader.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.DescriptorSetLayoutList.h" />
   </ItemGroup>
 </Project>
