--- a/XEngine.Common/XEngine.Common.vcxproj.filters
+++ b/XEngine.Common/XEngine.Common.vcxproj.filters
@@ -7,5 +7,6 @@
   <ItemGroup>
     <ClInclude Include="XEngine.ThreadPool.h" />
     <ClInclude Include="XEngine.ThreadPoolUtils.h" />
+    <ClInclude Include="XEngine.Memory.h" />
   </ItemGroup>
 </Project>
