--- a/XLib/XLib.vcxproj
+++ b/XLib/XLib.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\XLib.Allocation.h" />
     <ClInclude Include="Source\XLib.AllocatorAdapterBase.h" />
     <ClInclude Include="Source\XLib.ByteStream.h" />
     <ClInclude Include="Source\XLib.Color.h" />
