XEngine.Render.Scheduler WIP

--- a/XEngine.Render/XEngine.Render.vcxproj
+++ b/XEngine.Render/XEngine.Render.vcxproj
@@ -108,14 +108,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="XEngine.Render.BloomPass.h" />
+    <ClInclude Include="XEngine.Render.Bloom.h" />
     <ClInclude Include="XEngine.Render.h" />
+    <ClInclude Include="XEngine.Render.PostComposition.h" />
+    <ClInclude Include="XEngine.Render.Scene.h" />
     <ClInclude Include="XEngine.Render.Scheduler.h" />
     <ClInclude Include="XEngine.Render.ShaderLibrary.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="XEngine.Render.BloomPass.cpp" />
+    <ClCompile Include="XEngine.Render.Bloom.cpp" />
     <ClCompile Include="XEngine.Render.cpp" />
+    <ClCompile Include="XEngine.Render.PostComposition.cpp" />
     <ClCompile Include="XEngine.Render.Scheduler.cpp" />
     <ClCompile Include="XEngine.Render.ShaderLibrary.cpp" />
   </ItemGroup>
