--- a/XEngine.Render/XEngine.Render.vcxproj.filters
+++ b/XEngine.Render/XEngine.Render.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClInclude Include="XEngine.Render.Bloom.h" />
     <ClInclude Include="XEngine.Render.Scene.h" />
     <ClInclude Include="XEngine.Render.PostComposition.h" />
+    <ClInclude Include="XEngine.Render.Allocation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="XEngine.Render.cpp" />
