--- a/XEngine.Render/XEngine.Render.vcxproj
+++ b/XEngine.Render/XEngine.Render.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="XEngine.Render.Bloom.cpp" />
     <ClCompile Include="XEngine.Render.cpp" />
     <ClCompile Include="XEngine.Render.PostComposition.cpp" />
+    <ClCompile Include="XEngine.Render.Scene.cpp" />
     <ClCompile Include="XEngine.Render.Scheduler.cpp" />
     <ClCompile Include="XEngine.Render.ShaderLibrary.cpp" />
   </ItemGroup>
