--- a/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
+++ b/XEngine.Render.Shaders.Builder/XEngine.Render.Shaders.Builder.vcxproj
@@ -100,25 +100,25 @@ xcopy /y $(SolutionDir)External\Microsoft.DirectXShaderCompiler\bin\$(Platform)\
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PseudoCTokenizer.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.DescriptorSetLayoutList.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.EntryPoint.cpp" />
+    <ClCompile Include="XEngine.Render.Shaders.Builder.ListingLoader.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.PipelineLayoutList.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.PipelineList.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.ShaderList.cpp" />
     <ClCompile Include="XEngine.Render.Shaders.Builder.SourceCache.cpp" />
-    <ClCompile Include="XEngine.Render.Shaders.Builder.BuildDescriptionLoader.cpp" />
+    <ClCompile Include="XJSON.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="PseudoCTokenizer.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.DescriptorSetLayoutList.h" />
+    <ClInclude Include="XEngine.Render.Shaders.Builder.ListingLoader.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.PipelineLayoutList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.PipelineList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.ShaderList.h" />
     <ClInclude Include="XEngine.Render.Shaders.Builder.SourceCache.h" />
-    <ClInclude Include="XEngine.Render.Shaders.Builder.BuildDescriptionLoader.h" />
+    <ClInclude Include="XJSON.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XEngine.Render.HAL.Common\XEngine.Render.HAL.Common.vcxproj">
