--- a/XEngine.Render.HAL.ShaderCompiler/XEngine.Render.HAL.ShaderCompiler.vcxproj.filters
+++ b/XEngine.Render.HAL.ShaderCompiler/XEngine.Render.HAL.ShaderCompiler.vcxproj.filters
@@ -2,8 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="XEngine.Render.HAL.ShaderCompiler.h" />
+    <ClInclude Include="XEngine.Render.HAL.ShaderCompiler.HLSLPatcher.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="XEngine.Render.HAL.ShaderCompiler.cpp" />
+    <ClCompile Include="XEngine.Render.HAL.ShaderCompiler.HLSLPatcher.cpp" />
   </ItemGroup>
 </Project>
