--- a/XLib/XLib.vcxproj
+++ b/XLib/XLib.vcxproj
@@ -24,15 +24,16 @@
     <ClInclude Include="Source\XLib.ByteStream.h" />
     <ClInclude Include="Source\XLib.Color.h" />
     <ClInclude Include="Source\XLib.Containers.BitArray.h" />
-    <ClInclude Include="Source\XLib.Containers.FlatHashMap.h" />
-    <ClInclude Include="Source\XLib.Containers.IntrusiveDoublyLinkedList.h" />
+    <ClInclude Include="Source\XLib.Containers.HashMap.h" />
+    <ClInclude Include="Source\XLib.Containers.DoublyLinkedList.h" />
+    <ClInclude Include="Source\XLib.RefCounted.h" />
     <ClInclude Include="Source\XLib.Text.h" />
     <ClInclude Include="Source\XLib.JSON.h" />
     <ClInclude Include="Source\XLib.Math.Quaternion.h" />
     <ClInclude Include="Source\XLib.Algorithm.QuickSort.h" />
     <ClInclude Include="Source\XLib.Containers.BinaryHeap.h" />
     <ClInclude Include="Source\XLib.Containers.CyclicQueue.h" />
-    <ClInclude Include="Source\XLib.Containers.IntrusiveBinaryTree.h" />
+    <ClInclude Include="Source\XLib.Containers.BinaryTree.h" />
     <ClInclude Include="Source\XLib.CRC.h" />
     <ClInclude Include="Source\XLib.Delegate.h" />
     <ClInclude Include="Source\XLib.Math.Matrix3x4.h" />
